Bug #41375: updated advisory
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@77356 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -17,8 +17,8 @@ desc: |
    ucsschool/userlogon/shares_folder_icon,
    ucsschool/userlogon/my_files_link_icon,
    ucsschool/userlogon/other_links_icon.
-   The name of the "My Files" directory in the folders created by the
-   netlogon script, can now be set with the UCR variable
+   The name of the "My Files" directory within the folder, created by the
+   netlogon script, can now be set via the UCR variable
    ucsschool/userlogon/my_files_link_name (Bug #41375).
  * Whitespace in the list of share names in the UCR variable
    ucsschool/userlogon/commonshares is now handled more securely (Bug
