Bug #43747: updated UCS@school manuals for UCS@school 4.2 - UCS@school version bump   - updated xml files   - renamed xml files - copyright - illustrations41 ==> illustrations42 (newer screenshots are still missing) - updated links to newer external documents (e.g. UCS manual)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77410 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/quickstart/Makefile
+++ b/doc/quickstart/Makefile
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-MAIN := quickstart-ucsschool-4.1R2-de
+MAIN := quickstart-ucsschool-4.2-de
 STYLESHEET := univention_extdocs
 quickstart-de%: lang := de
 
