Bug #43389: add missing dependency to pytest
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77527 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/control
+++ b/ucs-test-ucsschool/debian/control
@@ -13,6 +13,7 @@ Architecture: all
 Depends: ucs-test-libs,
  ucs-test-framework,
  python-pycurl,
+ python-pytest,
  eapol
  ${misc:Depends}
 Provides: ucs-test-module
