--- a/doc/errata/staging/italc.yaml
+++ b/doc/errata/staging/italc.yaml
@@ -6,6 +6,7 @@ src: italc
 fix: 2:2.0.25-18.101.201701021705
 desc: |
  * A segfault in the UMC module <guimenu>Computer room</guimenu> has been fixed which occurred
-   during receiving a screenshot from a clients computer (Bug #43244).
- * A segfault in the UMC module <guimenu>Computer room</guimenu> is now prevented (Bug #43092).
+   during receiving a screenshot from a client's computer (Bug #43244).
+ * A segfault in the UMC module <guimenu>Computer room</guimenu> could occur randomly when
+   determining the current user on a windows client. The segfault has now been fixed (Bug #43092).
 bug: [43244, 43092]
