--- a/doc/errata/staging/ucs-school-webproxy.yaml
+++ b/doc/errata/staging/ucs-school-webproxy.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-webproxy
 fix: 12.0.4-3.125.201702061511
 desc: |
- * The file wpad.dat is now created as a link to proxy.pac (Bug #31728).
+ * The file wpad.dat for browser proxy configuration is now created as a symlink to proxy.pac (Bug #31728).
 bug: [31728]
