--- a/ucs-school-l10n-fr/Makefile
+++ b/ucs-school-l10n-fr/Makefile
@@ -36,10 +36,9 @@
 build:
 
 include all_targets.mk
-ADDITIONAL = $(DESTDIR)/usr/share/locale/fr/LC_MESSAGES/ucs-school-ucr-l10n.mo
 $(DESTDIR)/usr/share/locale/fr/LC_MESSAGES/ucs-school-ucr-l10n.mo: fr/ucs-school-ucr-l10n.po
 
-install: $(ALL_TARGETS) $(ADDITIONAL)
+install: $(ALL_TARGETS)
 
 %.mo:
 	mkdir -p $(@D)
