--- a/ucs-school-umc-common/debian/rules
+++ b/ucs-school-umc-common/debian/rules
@@ -34,7 +34,7 @@ override_dh_auto_test:
 	ucslint
 
 override_dh_auto_build:
-	dh-umc-module-build
+	dh-umc-module-build --core
 	dh_auto_build
 	mv de.mo ucs-school-common.mo
 
