Bug #43731: revert, wrong branch
This reverts commit fda4523da08cf7d81b50626a90b86c1e366b0cb6.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@78273 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/debian/rules
+++ b/ucs-school-l10n-fr/debian/rules
@@ -28,6 +28,7 @@
 # <http://www.gnu.org/licenses/>.
 
 override_dh_auto_install:
+	univention-install-config-registry
 	dh_auto_install
 
 override_dh_auto_test:
