Bug #43527: updated advisory
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78329 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -5,7 +5,8 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-computerroom
 fix: 
 desc: |
- * Hide teachers screens in the computerroom by default. To revert to the
+ * Hide teacher's screens in the computerroom by default. To revert to the
    previous behavior (displaying teachers screens like those of students),
-   setucsschool/umc/computerroom/hide_screenshots/teachers=no (Bug #43527).
+   set <envar>ucsschool/umc/computerroom/hide_screenshots/teachers</envar>
+   to <literal>no</literal> (Bug #43527).
 bug: [43527]
