--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -7,4 +7,5 @@ fix:
 desc: |
  * The entries in the overview page have been migrated to the new UCS 4.2
    portal entries (Bug #42407).
-bug: [42407]
+ * The outdated preview installer package has been removed from source (Bug #43752).
+bug: [42407, 43752]
