--- a/ucs-school-metapackage/debian/control
+++ b/ucs-school-metapackage/debian/control
@@ -15,7 +15,7 @@ Depends: univention-ldap-server (>= 8.0.77-4),
  ucs-school-ldap-acls-master,
  ucs-school-umc-helpdesk-schema,
  ucs-school-info,
- ucs-school-umc-installer | ucs-school-umc-installer-preview,
+ ucs-school-umc-installer,
  python-univention (>= 6.0.21-1),
  univention-management-console-module-selective-udm,
  univention-management-console (>= 4.0.231-1),
@@ -106,7 +106,7 @@ Depends: univention-ldap-server (>= 8.0.77-4),
  ucs-school-old-homedirs,
  ucs-school-old-sharedirs,
  ucs-school-info,
- ucs-school-umc-installer | ucs-school-umc-installer-preview,
+ ucs-school-umc-installer,
  libunivention-ldb-modules | univention-samba,
  univention-s4-connector (>= 6.0.128-24) | univention-samba,
  univention-management-console (>= 4.0.231-1),
