--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -5,8 +5,8 @@ scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-exam
 fix: 
 desc: |
- * Some UCR variables have not been cleaned up after the exam mode has been finished.
-   This problem has bow been fixed (Bug #44082).
+ * Some UCR variables were not cleaned up when the exam mode finished.
+   This problem has now been fixed (Bug #44082).
  * The creation of exam users is slowed down with each additional group
    membership of the participating students. If groups are not required
    for exam users, they can now be ignored when the exam users are created.
