--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [4]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-exam
-fix: 
+fix: 6.0.11-1.132.201704052257
 desc: |
  * Some UCR variables were not cleaned up when the exam mode finished.
    This problem has now been fixed (Bug #44082).
