Bug #44326: added changelog.xml / updated advisories
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@78702 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -12,5 +12,5 @@ desc: |
    for exam users, they can now be ignored when the exam users are created.
    Via the UCR variable <envar>ucsschool/exam/group/ldap/blacklist/regex</envar> a
    regular expression may be specified. Each matching group DN is blacklisted for
-   exam users. The UCR variable has to be specified on the DC master.
+   exam users. The UCR variable has to be specified on the DC master (Bug #44073).
 bug: [44073,44082]
