--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,5 +5,6 @@ scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-import
 fix: 14.0.16-42.333.201702081756
 desc: |
- * The memory footprint has been massively lowered (Bug #41882).
+ * The memory footprint of <command>ucs-school-user-import</command> resp.
+   <command>import_user</command> has been massively lowered (Bug #41882).
 bug: [41882]
