--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -7,4 +7,6 @@ fix:
 desc: |
  * It is now possible to run hooks on the DC master before the creation
    of exam users (Bug #44225).
-bug: [44225]
+ * Some UCR variables have not been cleaned up after the exam mode has been finished.
+   This problem has bow been fixed (Bug #44109).
+bug: [44225, 44109]
