--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,10 +3,11 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-exam
-fix: 7.0.3-7A~4.2.0.201704280956
+fix: 7.0.3-9A~4.2.0.201705031542
 desc: |
  * It is now possible to run hooks on the DC master before the creation
    of exam users (Bug #44225).
  * Some UCR variables have not been cleaned up after the exam mode has been finished.
    This problem has bow been fixed (Bug #44109).
-bug: [44225, 44109]
+ * The time needed to create exam users has been reduced (Bug #43019).
+bug: [44225, 44109, 43019]
