--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,8 +3,9 @@ release: "4.1"
 version: [11]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-exam
-fix: 
+fix: 6.0.11-3.134.201705051303
 desc: |
  * It is now possible to run hooks on the DC master before the creation
    of exam users (Bug #44408).
-bug: [44408]
+ * The term "UCS@school" has been removed from some texts for branding purposes (Bug #44492).
+bug: [44408, 44492]
