--- a/doc/errata/staging/ucs-school-umc-csv-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-csv-import.yaml
@@ -7,4 +7,5 @@ fix: 4.0.7-2A~4.2.0.201705030929
 desc: |
  * A regression in the UMC CSV import module that prevented imports of
    users reusing previous paswords, has been fixed (Bug #34923).
-bug: [34923]
+ * The term "UCS@school" has been removed from some texts for branding purposes (Bug #44544).
+bug: [34923, 44544]
