Bug #44641: add workaround for using admin connections for UMC user/class/computer/school wizards if explicitly enabled
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79481 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -6,4 +6,5 @@ src: ucs-school-umc-wizards
 fix: 
 desc: |
  * Don't display an error message after removing users from a school (Bug #44588)
-bug: [44588]
+ * A special UCR variable has been added that may enable the use of LDAP admin connections in the UMC user/class/computer/school wizards. This UCR variable should only be used, if familiar with the related security implications! (Bug #44641).
+bug: [44588,44641]
