--- a/doc/errata/staging/ucs-school-umc-csv-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-csv-import.yaml
@@ -3,9 +3,10 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-csv-import
-fix: 4.0.7-2A~4.2.0.201705030929
+fix: 
 desc: |
  * A regression in the UMC CSV import module that prevented imports of
    users reusing previous paswords, has been fixed (Bug #34923).
  * The term "UCS@school" has been removed from some texts for branding purposes (Bug #44544).
-bug: [34923, 44544]
+ * A special UCR variable has been added that may enable the use of LDAP admin connections during the UMC CSV import. This UCR variable should only be used, if familiar with the related security implications! (Bug #44642).
+bug: [34923, 44544, 44641]
