--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -3,7 +3,8 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-wizards
-fix: 9.0.4-5A~4.2.0.201705161710
+fix: 
 desc: |
  * Don't display an error message after removing users from a school (Bug #44537)
-bug: [44537]
+ * A special UCR variable has been added that may enable the use of LDAP admin connections in the UMC user/class/computer/school wizards. This UCR variable should only be used, if familiar with the related security implications! (Bug #44642).
+bug: [44537,44642]
