--- a/doc/errata/staging/ucs-school-umc-csv-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-csv-import.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-csv-import
-fix: 
+fix: 4.0.9-1A~4.2.0.201705221405
 desc: |
  * A regression in the UMC CSV import module that prevented imports of
    users reusing previous paswords, has been fixed (Bug #34923).
