--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -3,8 +3,10 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-wizards
-fix: 9.0.5-1A~4.2.0.201705221405
+fix: 9.0.5-2A~4.2.0.201705231352
 desc: |
  * Don't display an error message after removing users from a school (Bug #44537)
  * A special UCR variable has been added that may enable the use of LDAP admin connections in the UMC user/class/computer/school wizards. This UCR variable should only be used, if familiar with the related security implications! (Bug #44642).
-bug: [44537,44642]
+ * Sort correctly by class inside user wizard grid
+ * Sort wizard grids by default
+bug: [44537,44642,42756,44663]
