--- a/doc/errata/staging/ucs-school-umc-printermoderation.yaml
+++ b/doc/errata/staging/ucs-school-umc-printermoderation.yaml
@@ -5,5 +5,6 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-printermoderation 
 fix: 14.0.3-3A~4.2.0.201705231432
 desc: |
- * Fix by date sorting behaviour
+ * In previous versions the printing queue wasn't reliable sorted by date.
+   (Bug #44335) 
 bug: [44335]
