--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,9 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-lib
-fix: 10.0.2-2A~4.2.0.201705221425
+fix: 10.0.2-3A~4.2.0.201705291401
 desc: |
  * An error during removing users from school has been fixed (Bug #44546).
-bug: [44546]
+ * Code for createing hooks was moved from the import package to the lib
+   package (Bug #44225)
+bug: [44546, 44225]
