Bug #42249: fix spelling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79722 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -6,6 +6,6 @@ src: ucs-school-lib
 fix: 10.0.2-3A~4.2.0.201705291401
 desc: |
  * An error during removing users from school has been fixed (Bug #44546).
- * Code for createing hooks was moved from the import package to the lib
+ * Code for creating hooks was moved from the import package to the lib
    package (Bug #44225)
 bug: [44546, 44225]
