Bug #43019: fix for case of users not in any OU
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79982 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-l10n-fr.yaml
+++ b/doc/errata/staging/ucs-school-l10n-fr.yaml
@@ -3,7 +3,8 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-l10n-fr
-fix: 2.0.0-7A~4.2.0.201705290919
+fix:
 desc: |
  * Missing French translations have been updated (Bug #44698)
-bug: [44698]
+ * Missing French translations have been updated (Bug #43019)
+bug: [44698, 43019]
