--- a/doc/errata/staging/ucs-school-l10n-fr.yaml
+++ b/doc/errata/staging/ucs-school-l10n-fr.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-l10n-fr
-fix:
+fix: 2.0.0-8A~4.2.0.201706011431
 desc: |
  * Missing French translations have been updated (Bug #44698)
  * Missing French translations have been updated (Bug #43019)
