--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-exam
-fix:
+fix: 7.0.4-11A~4.2.0.201706011428
 desc: |
  * It is now possible to run hooks on the DC master before the creation
    of exam users (Bug #44225).
