--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -5,7 +5,7 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-computerroom
 fix: 9.0.8-1A~4.2.0.201706011309
 desc: |
- * Some UCR variables have not been cleaned up after the exam mode has been finished.
-   This problem has now been fixed (Bug #44109).
+ * The returning of a computer rooms UCR variables to their defaults at
+   the end of an exam, is now more reliable (Bug #44109).
  * A syntax error during resetting of UCR variables has been fixed (Bug #37840).
 bug: [44109, 37840]
