--- a/doc/errata/staging/ucs-school-umc-csv-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-csv-import.yaml
@@ -5,6 +5,6 @@ scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-csv-import
 fix: 3.0.6-1.57.201705221128
 desc: |
- * The term "UCS@school" has been removed from some texts for branding purposes (Bug #44491).
+ * Some description texts within the UMC module have been altered (Bug #44491).
  * A special UCR variable has been added that may enable the use of LDAP admin connections during the UMC CSV import. This UCR variable should only be used, if familiar with the related security implications! (Bug #44641).
 bug: [44491,44641]
