--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -1,10 +1,10 @@
 product: ucsschool
-release: "4.2"
+release: "4.1"
 version: [2]
-scope: ucs_4.2-0-ucs-school-4.2
+scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-wizards
 fix: 8.0.2-1.157.201705221128
 desc: |
- * Don't display an error message after removing users from a school (Bug #44588)
+ * An error message was shown after removing users from a school via the &ucsUAS; user wizard. The triggering error has been fixed (Bug #44588).
  * A special UCR variable has been added that may enable the use of LDAP admin connections in the UMC user/class/computer/school wizards. This UCR variable should only be used, if familiar with the related security implications! (Bug #44641).
 bug: [44588,44641]
