Bug #44689: updated advisory
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80438 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/0template.yaml
+++ b/doc/errata/staging/0template.yaml
@@ -1,10 +1,10 @@
 product: ucsschool
 release: "4.2"
-version: [2]
+version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: 
 fix: 
 desc: |
- * description 1 (Bug #00000)
- * description 2 (Bug #00000)
+ * May contain docbook tags like <package>package</package> or <envar>foo/bar/ding=dong</envar> (Bug #00000)
+ * The line length is *NOT* limited to 80 columns! (Bug #00000)
 bug: []
