Bug #44826: updated advisories
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80439 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -8,5 +8,5 @@ desc: |
  * It is now possible to run hooks on the DC master before the creation
    of exam users (Bug #44225).
  * The time needed to create exam users has been reduced (Bug #43019).
- * The term "UCS@school" has been removed from some texts for branding purposes (Bug #44543).
+ * Some description texts within the UMC module have been altered (Bug #44543).
 bug: [44225, 43019, 44543]
