--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,6 +5,6 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
 fix: 15.0.0-4A~4.2.0.201705291403
 desc: |
- * Code for running hooks was moved from the import package to the ucsschool
-   lib (Bug #44225).
+ * Code for running hooks was moved from the import package to the &ucsUAS;
+   python library (Bug #44225).
 bug: [44225]
