--- a/doc/errata/staging/ucs-school-radius-802.1x.yaml
+++ b/doc/errata/staging/ucs-school-radius-802.1x.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-radius-802.1x
-fix: 
+fix: 6.0.0-2A~4.2.0.201706291610
 desc: |
  * A syntax error in the script <filename>ucs-school-802.1x.postrm</filename> has been fixed (Bug #44901).
 bug: [44901]
