Bug #43421: added new UCR variables for copy_request_to_tunnel
New variable names:
- freeradius/conf/auth-type/ttls/copy_request_to_tunnel
- freeradius/conf/auth-type/peap/copy_request_to_tunnel

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@80754 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-radius-802.1x/conffiles/etc/freeradius/eap.conf
+++ b/ucs-school-radius-802.1x/conffiles/etc/freeradius/eap.conf
@@ -257,6 +257,10 @@ else:
 			#
 			# allowed values: {no, yes}
 		#	copy_request_to_tunnel = no
+@!@
+value = configRegistry.is_true('freeradius/conf/auth-type/ttls/copy_request_to_tunnel', False)
+print '\t\t\tcopy_request_to_tunnel = %s' % ({True: 'yes', False: 'no'}[value],)
+@!@
 
 			#  The reply attributes sent to the NAS are
 			#  usually based on the name of the user
@@ -317,6 +321,10 @@ else:
 			#  items, which are the same as for TTLS.
 		#	copy_request_to_tunnel = no
 		#	use_tunneled_reply = no
+@!@
+value = configRegistry.is_true('freeradius/conf/auth-type/peap/copy_request_to_tunnel', False)
+print '\t\t\tcopy_request_to_tunnel = %s' % ({True: 'yes', False: 'no'}[value],)
+@!@
 
 			#  When the tunneled session is proxied, the
 			#  home server may not understand EAP-MSCHAP-V2.
