Bug #44918: switch from @%@BCWARNING=@%@ to @%@UCRWARNING=@%@
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@81029 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-radius-802.1x/conffiles/etc/freeradius/eap.conf
+++ b/ucs-school-radius-802.1x/conffiles/etc/freeradius/eap.conf
@@ -1,5 +1,5 @@
 # -*- text -*-
-@%@BCWARNING=# @%@
+@%@UCRWARNING=# @%@
 #
 #  Whatever you do, do NOT set 'Auth-Type := EAP'.  The server
 #  is smart enough to figure this out on its own.  The most
