Bug #45022: add Python client library
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81417 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -70,3 +70,18 @@ Description: UCS@school: RESTful API for importing users
  corporate environments. For more information about UCS,
  refer to: http://www.univention.de/
 Homepage: https://www.univention.de/produkte/ucsschool/
+
+Package: ucs-school-import-http-api-client
+Architecture: all
+Depends: ${misc:Depends},
+ python-requests,
+ python-magic,
+ python-univention-config-registry,
+Description: UCS@school: Python client library for the US@school API
+ This package provides a Python client for accessing the RESTful HTTP API.
+ .
+ This package is part of Univention Corporate Server (UCS),
+ an integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+Homepage: https://www.univention.de/produkte/ucsschool/
