Bug #45024: make URLs and port configurable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81418 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/conffiles/etc/apache2/sites-available/ucs-school-import-http-api.conf
+++ b/ucs-school-import/conffiles/etc/apache2/sites-available/ucs-school-import-http-api.conf
@@ -1,17 +1,20 @@
 @%@UCRWARNING=# @%@
 
-Alias /ucsschool-media/ /var/spool/ucs-school-import/media/
-Alias /ucsschool-static/ /var/lib/ucs-school-import-http-api/static/
-
-# strip the X-Forwarded-Proto header from incoming requests
-RequestHeader unset X-Forwarded-Proto
-
 # set the header for requests using HTTPS
-RequestHeader set X-Forwarded-Proto https env=HTTPS
+RequestHeader setifempty X-Forwarded-Proto https env=HTTPS
 
-ProxyPass /ucsschool-static/ !
-#ProxyPass /ucsschool-media/ !
-ProxyPass /api http://localhost:8000/
+@!@
+url_path_media = configRegistry.get('ucsschool/import/http_api/URL_path/media', 'ucsschool-media').strip().strip('/')
+url_path_static = configRegistry.get('ucsschool/import/http_api/URL_path/static', 'ucsschool-static').strip().strip('/')
+url_path_api = configRegistry.get('ucsschool/import/http_api/URL_path/api', 'api').strip().strip('/')
+port = configRegistry.get('ucsschool/import/http_api/wsgi_server_port', '8000')
+
+print('Alias /{}/ /var/spool/ucs-school-import/media/'.format(url_path_media))
+print('Alias /{}/ /var/lib/ucs-school-import-http-api/static/'.format(url_path_static))
+print('ProxyPass /{}/ !'.format(url_path_media))
+print('ProxyPass /{}/ !'.format(url_path_static))
+print('ProxyPass /{} http://localhost:{}/'.format(url_path_api, port))
+@!@
 ProxyPreserveHost On
 
 <Directory /var/spool/ucs-school-import/media/>
@@ -23,7 +26,12 @@ ProxyPreserveHost On
 </Directory>
 
 <Location "/api">
-	ProxyPass http://localhost:8000
-	ProxyPassReverse http://localhost:8000
-	RequestHeader set X-SCRIPT-NAME /api
+@!@
+port = configRegistry.get('ucsschool/import/http_api/wsgi_server_port', '8000')
+url_path_api = configRegistry.get('ucsschool/import/http_api/URL_path/api', 'api').strip().strip('/')
+
+print('	ProxyPass http://localhost:{}'.format(port))
+print('	ProxyPassReverse http://localhost:{}'.format(port))
+print('	RequestHeader set X-SCRIPT-NAME /{}'.format(url_path_api))
+@!@
 </Location>
