Bug #45024: block installation of Python 3 version of Celery
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81677 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -63,6 +63,7 @@ Depends: ${misc:Depends},
  python-psycopg2 (>=2.5.4),
  python-django-pam (>=1.2.0-1),
  python-pampy (>=1.8.2-1),
+Conflicts: python3-celery
 Description: UCS@school: RESTful API for importing users
  This package provides a service for importing users using a RESTful HTTP API.
  .
