Bug #45024: add support for paging, filtering and ordering
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81779 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -58,6 +58,7 @@ Depends: ${misc:Depends},
  python-django (>=1.8),
  python-djangorestframework (>= 3.4.0-2),
  python-django-celery (>=3.1.16-1),
+ python-django-filter (>=1.0.1-1),
  gunicorn (>=19.0-1),
  univention-postgresql-9.4,
  python-psycopg2 (>=2.5.4),
