--- a/doc/errata/staging/ucs-school-radius-802.1x.yaml
+++ b/doc/errata/staging/ucs-school-radius-802.1x.yaml
@@ -5,5 +5,12 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-radius-802.1x
 fix: 6.0.0-2A~4.2.0.201706291610
 desc: |
+ * New UCR variables have been added to enable/disable the option <literal>copy_request_to_tunnel</literal> for TTLS or PEAP.
+   The variable names are <envar>freeradius/conf/auth-type/ttls/copy_request_to_tunnel</envar> and
+   <envar>freeradius/conf/auth-type/peap/copy_request_to_tunnel</envar>. By default the option is disabled	(Bug #44920).
+ * Add support for kerberos principals as username in radius helper <filename>ucs-school-ntlm-auth</filename> (Bug #44955).
  * A syntax error in the script <filename>ucs-school-802.1x.postrm</filename> has been fixed (Bug #44901).
-bug: [44901]
+ * Support different notations of station ids (e.g. 11:22:33:44:55:66 or 1122.3344.5566 or 11-22-33-44-55-66) in
+   radius helper <filename>ucs-school-ntlm-auth</filename> (Bug #44917).
+ * Some basic logging mechanism has been added for debugging purposes for radius helper <filename>ucs-school-ntlm-auth</filename> (Bug #44919)
+bug: [44920, 44955, 44901, 44917, 44919]
