--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,9 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.0-7A~4.2.0.201706271839
+fix: 15.0.0-32A~4.2.0.201708080740
 desc: |
  * When run with the <option>--dry-run</option> option, the raised counter is not stored anymore in LDAP (Bug #44838).
-bug: [44838]
+ * A Python client library to use the experimental RESTful API was created (Bug #45022).
+ * An experimental RESTful API for starting import jobs can now be installed (Bug #45019 #45024).
+bug: [44838, 45019, 45022, 45024]
