--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -8,4 +8,5 @@ desc: |
  * When run with the <option>--dry-run</option> option, the raised counter is not stored anymore in LDAP (Bug #44838).
  * A Python client library to use the experimental RESTful API was created (Bug #45022).
  * An experimental RESTful API for starting import jobs can now be installed (Bug #45019 #45024).
-bug: [44838, 45019, 45022, 45024]
+ * The handling of scheme:email options during import of user has been improved: the COUNTER variables may now be used (Bug #44993).
+bug: [44838, 45019, 45022, 45024, 44993]
