--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-lib
-fix:
+fix: 10.0.2-5A~4.2.0.201709111855
 desc: |
  * Support was added for changing the base path when searching for hooks (Bug #45024).
  * The exam mode finishes more reliable (Bug #43089).
