--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-lib
-fix:
+fix: 10.0.2-5A~4.2.0.201709111855
 desc: |
  * The exam mode finishes more reliable (Bug #45403).
 bug: [45403]
