--- a/doc/errata/staging/ucs-school-info.yaml
+++ b/doc/errata/staging/ucs-school-info.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-info
-fix: 
+fix: 7.0.1-1A~4.2.0.201709081319
 desc: |
  * The CLI tool "ucs-school-info" does not crash anymore when displaying
    network information.
