--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-exam
-fix: 
+fix: 7.0.4-14A~4.2.0.201709131826
 desc: |
  * The <command>exam-and-room-cleanup</command> script will now also remove computers accounts from the exam group (Bug #43978).
 bug: [43978]
