Bug #45304: register italc as submodule at italc/italc

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "italc-windows/italc.git"]
 	path = italc-windows/italc.git
 	url = ../italc
+[submodule "italc/italc"]
+	path = italc/italc
+	url = ../italc
