--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-users
-fix: 
+fix: 13.0.0-3A~4.2.0.201709181147
 desc: |
  * An traceback is prevented in the UMC module if the user has no permissions to reset another users password (Bug #45255).
 bug: [45255]
