--- a/doc/errata/staging/ucs-school-webproxy.yaml
+++ b/doc/errata/staging/ucs-school-webproxy.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-webproxy
-fix: 
+fix: 13.0.1-1A~4.2.0.201709141224
 desc: |
- * A racing condition in the caching mechanism for handling proxy groups has been fixed (Bug #45352).
+ * A race condition in the caching mechanism for handling proxy groups has been fixed (Bug #45352).
 bug: [45352]
