--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -13,4 +13,5 @@ desc: |
  * Configuration and code for reading and writing CSV data compatible with the HTTP-API was added (Bug #45342).
  * It is now possible to modify the attributes that are used for formatting user properties from a schema by creating hooks. An example is provided in /usr/share/doc/ucs-school-import/format_hook_example.py (Bug #42144).
  * The class generation of the test user creation script was fixed (Bug #45436).
-bug: [42144, 44838, 45019, 45022, 45024, 44993, 45044, 45342, 45436]
+ * When creating a school the DHCP server objects for the administrative DC Slave are now also created or moved into the DHCP service of the school in a multiserver environment (Bug #42687).
+bug: [42144, 44838, 45019, 45022, 45024, 44993, 45044, 45342, 45436, 42687]
