--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -6,4 +6,5 @@ src: ucs-school-lib
 fix: 9.0.33-5.282.201709181206
 desc: |
  * In some cases after stopping the exam mode, shares on the school server weren't accessible anymore. This bug has been fixed (Bug #45403).
-bug: [45403]
+ * When creating a school the DHCP server objects for the administrative DC Slave are now also created or moved into the DHCP service of the school in a multiserver environment (Bug #45463).
+bug: [45403, 45463]
