--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.0-44A~4.2.0.201709221150
+fix:
 desc: |
  * When run with the <option>--dry-run</option> option, the raised counter is not stored anymore in LDAP (Bug #44838).
  * A Python client library to use the experimental RESTful API was created (Bug #45022).
@@ -14,4 +14,5 @@ desc: |
  * It is now possible to modify the attributes that are used for formatting user properties from a schema by creating hooks. An example is provided in /usr/share/doc/ucs-school-import/format_hook_example.py (Bug #42144).
  * The class generation of the test user creation script was fixed (Bug #45436).
  * When creating a school the DHCP server objects for the administrative DC Slave are now also created or moved into the DHCP service of the school in a multiserver environment (Bug #42687).
-bug: [42144, 44838, 45019, 45022, 45024, 44993, 45044, 45342, 45436, 42687]
+ * The school name is now checked case sensitively before importing a user (Bug #42456).
+bug: [42144, 42456, 44838, 45019, 45022, 45024, 44993, 45044, 45342, 45436, 42687]
