--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -1,9 +1,13 @@
 product: ucsschool
 release: "4.2"
-version: [1]
+version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-exam
 fix: 7.0.4-14A~4.2.0.201709131826
 desc: |
- * The <command>exam-and-room-cleanup</command> script will now also remove computers accounts from the exam group (Bug #43978).
-bug: [43978]
+ * The script <command>exam-and-room-cleanup</command> will now also remove computers accounts from the exam group (Bug #43978).
+ * In some &ucsUAS; environments students are member of a large number of groups. By default, if these students take part of
+   an exam, the exam mode copies all group memberships from the students to the corresponding exam users. For performance and
+   security reasons, it's now possible to blacklist groups from being taken over to exam users by defining a regular expression
+   for group DNs (UCR variable <env>ucsschool/exam/group/ldap/blacklist/regex</env>) (Bug #45473).
+bug: [43978,45473]
