--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -6,4 +6,5 @@ src: ucs-school-umc-users
 fix: 13.0.0-3A~4.2.0.201709181147
 desc: |
  * A traceback is prevented in the UMC module if the logged in user has no permissions to reset another users password (Bug #45255).
-bug: [45255]
+ * Special extended attributes are not anymore reset after changing user passwords. The error handling of the module has been improved (Bug #45468).
+bug: [45255, 45468]
