--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -3,9 +3,10 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-netlogon-user-logonscripts
-fix: 
+fix: 13.0.2-3A~4.2.0.201710091738
 desc: |
  * The generation of netlogon scripts for Windows users has been separated into a new daemon that
    is triggered via the Univention Directory Listener. This way, the LDAP replication should not
    be slowed down any longer by lots of LDAP changes relevant for netlogon script generation (Bug #42997).
-bug: [42997]
+ * The shortcuts to the users shares showed the wrong icons in Windows 10. This has been fixed (Bug #45301).
+bug: [42997, 45301]
