--- a/doc/errata/staging/ucs-school-radius-802.1x.yaml
+++ b/doc/errata/staging/ucs-school-radius-802.1x.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-radius-802.1x
-fix: 
+fix: 6.0.1-3A~4.2.0.201710092131
 desc: |
  * A traceback has been fixed that may happened if ucs-school-ntlm-auth is called without stationId (Bug #45482).
 bug: [45482]
