--- a/doc/errata/staging/ucs-school-radius-802.1x.yaml
+++ b/doc/errata/staging/ucs-school-radius-802.1x.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [4]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-radius-802.1x
-fix: 
+fix: 5.0.1-5.21.201710092144
 desc: |
  * A traceback has been fixed that may happened if ucs-school-ntlm-auth is called without stationId (Bug #45490).
 bug: [45490]
